Bug fixes. Clearing formula bar on escape. UI elements being hidden by tables. Newly created tables are not hidden.

--- a/public/css/spreadtables.css
+++ b/public/css/spreadtables.css
@@ -43,6 +43,7 @@ body{
     height: 40px;
     top: 0px;
     left: 0px;
+    z-index: 500;
 }
 
 .table-title-bar{
@@ -67,6 +68,7 @@ body{
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
+    z-index: 300;
 }
 
 .button {
@@ -176,6 +178,7 @@ body{
 #table-side-bar {
     position: fixed;
     top: 60px;
+    z-index: 500;
 }
 
 .side-bar-element{
@@ -187,6 +190,7 @@ body{
     left: -10px;
     padding: 5px;
     margin-bottom: 10px;
+    z-index: 500;
 }
 
 .side-bar-element:hover{
@@ -206,6 +210,8 @@ body{
     border: 1px solid black;
     left: 15%;
     right: 30%;
+    z-index: 500;
+    background-color: #ffffff;
 }
 
 #error-bar{
@@ -217,6 +223,8 @@ body{
     right: 30%;
     text-align: center;
     visibility: hidden;
+    z-index: 500;
+    background: #ffffff;
 }
 
 #overlay {
